app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  labels:
    app: nodejs
spec:
  selector:
    app: nodejs
  type: NodePort
  ports:
  - name: http
    port: 5050

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-v1
  namespace: lkhintibidze
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: nodejs
        image: nexus.devops.tbc:9443/lkhintibidze/test-node-server:1.0.0
        ports:
        - containerPort: 5050

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-v2
  namespace: lkhintibidze
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: nodejs
        image: nexus.devops.tbc:9443/lkhintibidze/test-node-server:1.2.0
        ports:
        - containerPort: 5050
